Updated parameters for Connections Request

--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -821,9 +821,11 @@ font-style: italic;
 
     <h3 class="field-label">Query parameters</h3>
     <div class="field-items">
-      <div class="param">since (optional)</div>
+      <div class="param">Active Since (optional)</div>
 
-      <div class="param-desc"><span class="param-type">Query Parameter</span> &mdash; Limit results to period after date=time stamp 'since'. format: Unix time in ms</div>
+      <div class="param-desc"><span class="param-type">Query Parameter</span> &mdash; Limit results to Connections that have been active since time stamp 'Active Since'. format: Unix time in ms</div><div class="param">Persistent Id (optional)</div>
+
+      <div class="param-desc"><span class="param-type">Query Parameter</span> &mdash; Limit result to <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#connection">Connection</a> with the provided <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#persistent-id">Persistent Id</a>. </div>
     </div>  <!-- field-items -->
 
 
@@ -3320,9 +3322,11 @@ font-style: italic;
 
     <h3 class="field-label">Query parameters</h3>
     <div class="field-items">
-      <div class="param">since (optional)</div>
+      <div class="param">Active Since (optional)</div>
 
-      <div class="param-desc"><span class="param-type">Query Parameter</span> &mdash; Limit results to period after date=time stamp 'since'. format: Unix time in ms</div>
+      <div class="param-desc"><span class="param-type">Query Parameter</span> &mdash; Limit results to Connections that have been active since time stamp 'Active Since'. format: Unix time in ms</div><div class="param">Persistent Id (optional)</div>
+
+      <div class="param-desc"><span class="param-type">Query Parameter</span> &mdash; Limit result to <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#connection">Connection</a> with the provided <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#persistent-id">Persistent Id</a>. </div>
     </div>  <!-- field-items -->
 
 
