Updated model Reference Result
Updated the model to describe that all properties are required.

--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -5028,9 +5028,9 @@ font-style: italic;
     <h3><a name="ReferenceResultModel"><code>ReferenceResultModel</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     <div class='model-description'>Result of the Operation Execute Request.</div>
     <div class="field-items">
-      <div class="param">ref (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Data Reference/Operation Reference. </div>
-<div class="param">value (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Return value of the Service Endpoint, accessed immediately after the request. format: Base64-encoded</div>
-<div class="param">connection (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Connection (connectionUrl). format: uri</div>
+      <div class="param">connection </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Connection (connectionUrl). format: uri</div>
+<div class="param">ref </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Data Reference/Operation Reference. </div>
+<div class="param">value </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Return value of the Service Endpoint, accessed immediately after the request. format: Base64-encoded</div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
