Fixed api error

--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -4922,7 +4922,7 @@ font-style: italic;
     <h3><a name="PersistentIdEventModel_extraData"><code>PersistentIdEventModel_extraData</code> - </a> <a class="up" href="#__Models">Up</a></h3>
     <div class='model-description'>extra data: Persistent Ids and Service Provider Identity.</div>
     <div class="field-items">
-      <div class="param">persistentIds (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">array[String]</a></span> Persistent Ids format: See Persistent Id Model.</div>
+      <div class="param">persistentIds </div><div class="param-desc"><span class="param-type"><a href="#string">array[String]</a></span> Persistent Ids format: See Persistent Id Model.</div>
 <div class="param">providerId </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Service Provider identity (publishedProviderUrl). format: url</div>
     </div>  <!-- field-items -->
   </div>
