Updated Subscription model
Added property 'Persistent Id'

--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -3229,6 +3229,7 @@ font-style: italic;
     <h3 class="field-label">Example data</h3>
     <div class="example-data-content-type">Content-Type: application/json</div>
     <pre class="example"><code>{
+  "persistentId" : "persistentId",
   "links" : {
     "service" : "http://example.com/aeiou",
     "self" : "http://example.com/aeiou",
@@ -4945,7 +4946,7 @@ font-style: italic;
     <div class="field-items">
       <div class="param">accounts (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Accounts (accountsUrl) format: url</div>
 <div class="param">consents (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Consents (consentsUrl) format: url</div>
-<div class="param">subscriptions (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Subscriptions url (subscriptionsUrl). format: url</div>
+<div class="param">subscriptions (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Subscriptions (subscriptionsUrl). format: url</div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
@@ -5135,6 +5136,7 @@ font-style: italic;
       <div class="param">activeFrom </div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Active from date time stamp. format: Unix time in ms</div>
 <div class="param">activeUntil </div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Active until date time stamp. format: Unix time in ms, nullable</div>
 <div class="param">links </div><div class="param-desc"><span class="param-type"><a href="#SubscriptionModel_links">SubscriptionModel_links</a></span>  </div>
+<div class="param">persistentId </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Persistent Id. </div>
 <div class="param">state </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> State of the service. </div>
     </div>  <!-- field-items -->
   </div>
