--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -5125,7 +5125,7 @@ font-style: italic;
   </div>
   <div class="model">
     <h3><a name="SourceUrlModel"><code>SourceUrlModel</code> - </a> <a class="up" href="#__Models">Up</a></h3>
-    <div class='model-description'>Source url</div>
+    <div class='model-description'>Data Descriptor of the Data Service that will serve as the source for the Personal Data (publishedServiceUrl).</div>
     <div class="field-items">
           </div>  <!-- field-items -->
   </div>
